<resources>
    <string name="nombre_app">KotlinApp3TEX</string>
    <string name="titulo_juego">TIC TAC TOE EXTREME</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="signup">SIGN UP</string>
    <string name="invitacion">POR INVITACIÓN</string>
    <string name="perfil">PERFIL</string>
    <string name="logros_desbloqueados">LOGROS</string>
    <string name="logros_bloqueados">LOGROS PENDIENTES</string>
    <string name="configuracion">CONFIGURACIÓN</string>
    <string name="lenguaje">IDIOMA</string>
    <string name="sonido">Sonido</string>
    <string name="tema">TEMA</string>
    <string name="estilo_pieza">ESTILO DE PIEZAS</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">E-mail</string>
    <string name="repite_contraseña">Repetir contraseña</string>
    <string name="nombre_partida">Nombre de la partida</string>
    <string name="codigo_partida">Código de la partida</string>
    <string name="matchmaking_one">Encontrando oponente.</string>
    <string name="matchmaking_two">Encontrando oponente..</string>
    <string name="matchmaking_three">Encontrando oponente...</string>
    <string name="matchmaking">Encontrando oponente...</string>
    <string name="jugador_uno">Jugador 1</string>
    <string name="jugador_dos">Jugador 2</string>
    <string name="temporizador">30:00</string>
    <string name="partidas_ganadas">Partidas Ganadas</string>
    <string name="partidas_perdidas">Partidas Perdidas</string>
    <string name="partidas_empatadas">Partidas Empatadas</string>
    <string name="tiempo_jugado">Tiempo Jugado</string>
    <string name="elo">ELO</string>
    <string name="titulo_logro">Título del logro</string>
    <string name="descripcion_logro">Descripción del logro</string>
    <string name="musica">Música</string>
    <string name="tutorial_A">El jugador que comienza se decide al azar. En el primer turno el jugador está obligado a colocar su símbolo en una casilla de la casilla grande del centro.</string>
    <string name="tutorial_B">La casilla en la que coloques tu símbolo en un tablero pequeño determina en qué tablero pequeño debe jugar tu oponente a continuación. </string>
    <string name="tutorial_C">Si un jugador coloca su símbolo en una casilla que, por ejemplo, está en la esquina superior derecha de un tablero pequeño, su oponente debe jugar en el tablero correspondiente a esa casilla en el tablero grande.</string>
    <string name="tutorial_D">El objetivo principal es ganar los tableros pequeños. Cuando un jugador consigue tres de sus símbolos en línea en un tablero pequeño, gana ese tablero.</string>
    <string name="tutorial_E">Ganar un tablero pequeño le otorga al jugador el control de esa área en el tablero grande, y su oponente debe jugar en el tablero pequeño correspondiente a la última casilla ocupada por el jugador ganador.</string>
    <string name="tutorial_F">Para ganar la partida, un jugador debe completar una línea de tres tableros pequeños en el tablero grande. Esta línea puede ser horizontal, vertical o diagonal. Cuando un jugador logra esto, ¡gana la partida!</string>
    <string name="one_of_six">1/6</string>
    <string name="two_of_six">2/6</string>
    <string name="three_of_six">3/6</string>
    <string name="four_of_six">4/6</string>
    <string name="five_of_six">5/6</string>
    <string name="six_of_six">6/6</string>
    <string name="back">Atrás</string>
    <string name="jugar">Jugar</string>
    <string name="logout">LogOut</string>
    <string name="politica_privacidad">Política de Privacidad</string>
    <string name="login">LOGIN</string>
    <string name="login2">login</string>
    <string name="casual">CASUAL</string>
    <string name="competitivo">COMPETITIVO</string>
    <string name="crear">CREAR</string>
    <string name="unirse">UNIRSE</string>
    <string name="maquina">MÁQUINA</string>
    <string name="dos_jugadores">2 JUGADORES</string>
    <string name="empezar">EMPEZAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="ingles">INGLÉS</string>
    <string name="español">ESPAÑOL</string>
    <string name="aplicar_cambios">APLICAR CAMBIOS</string>
    <string name="oscuro">OSCURO</string>
    <string name="claro">CLARO</string>
    <string name="clasico">CLÁSICO</string>
    <string name="extremo">EXTREME</string>
    <string name="no_cuenta">No tienes cuenta?</string>
    <string name="generar_informe">Generar Informe</string>
    <string name="escogeranyo">Escoge el mes y el año de los datos que quieras recuperar</string>
</resources>