<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.KotlinApp3TEX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="293dp"
        android:layout_height="667dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/g_title"
        style="@style/Title"
        android:layout_marginTop="60dp"
        android:text="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_offline"
        style="@style/NormalButton"
        android:layout_marginTop="41dp"
        android:onClick="toUnlockedAchivements"
        android:text="@string/logros_desbloqueados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <ImageButton
        android:id="@+id/btn_account"
        style="@style/BackButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="145dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g_title"
        app:srcCompat="@drawable/ic_account3" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_account">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                style="@style/ShortBodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textColor="@color/txt_negro" />

            <TextView
                android:id="@+id/textView3"
                style="@style/ShortBodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/partidas_empatadas"
                android:textColor="@color/txt_negro" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView4"
                style="@style/ShortBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/partidas_ganadas"
                android:textColor="@color/txt_negro" />

            <TextView
                android:id="@+id/textView5"
                style="@style/ShortBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tiempo_jugado"
                android:textColor="@color/txt_negro" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView6"
                style="@style/ShortBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/partidas_perdidas"
                android:textColor="@color/txt_negro" />

            <TextView
                android:id="@+id/textView7"
                style="@style/ShortBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/elo"
                android:textColor="@color/txt_negro" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/btn_menu"
        style="@style/BackButton"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu"
        android:onClick="showMenuFragment" />

    <View
        android:id="@+id/transparentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>