<!-- fragment_menu.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    android:orientation="vertical">

    <!-- Agrega tus elementos de menú aquí, por ejemplo: -->

    <ImageView
        android:id="@+id/iv_logo"
        style="@style/Tabla"
        android:layout_width="119dp"
        android:layout_height="119dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo" />

    <Button
        android:id="@+id/btn_menu_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background_menu"
        android:drawableLeft="@drawable/ic_play"
        android:gravity="center|start"
        android:paddingStart="14dp"
        android:text="@string/jugar"
        android:textColor="@color/txt_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <Button
        android:id="@+id/btn_menu_config"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_menu"
        android:drawableLeft="@drawable/ic_settings"
        android:paddingStart="14dp"
        android:text="@string/configuracion"
        android:textColor="@color/txt_negro"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_play"
        android:onClick=""/>

    <Button
        android:id="@+id/btn_menu_tuto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_menu"
        android:drawableLeft="@drawable/ic_tutorial"
        android:paddingStart="14dp"
        android:text="@string/tutorial"
        android:textColor="@color/txt_negro"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menu_config" />

    <Button
        android:id="@+id/btn_menu_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_menu"
        android:drawableLeft="@drawable/ic_logout"
        android:gravity="center|start"
        android:paddingStart="14dp"
        android:text="@string/logout"
        android:textColor="@color/txt_negro"
        app:layout_constraintBottom_toTopOf="@+id/btn_menu_privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_menu_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_menu"
        android:drawableLeft="@drawable/ic_policy"
        android:gravity="center|start"
        android:paddingStart="14dp"
        android:text="@string/politica_privacidad"
        android:textColor="@color/txt_negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Agrega más elementos según sea necesario -->
</androidx.constraintlayout.widget.ConstraintLayout>
