<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.KotlinApp3TEX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="293dp"
        android:layout_height="667dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Titulos"
        android:layout_marginTop="60dp"
        android:text="@string/tutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_table"
        style="@style/Tabla"
        android:layout_marginStart="68dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:srcCompat="@drawable/img_tutorial_one" />

    <TextView
        android:id="@+id/tv_tutorial_body"
        style="@style/TextoLargo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tutorial_A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_table" />

    <TextView
        android:id="@+id/tv_page"
        style="@style/ProgresoNumero"
        android:layout_width="wrap_content"
        android:layout_marginBottom="41dp"
        android:text="@string/one_of_six"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/transparentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>