<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.KotlinApp3TEX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light">


    <TextView
        android:id="@+id/g_title"
        style="@style/Titulos"
        android:layout_marginTop="60dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_online"
        style="@style/BotonNormal"
        android:layout_marginTop="39dp"
        android:onClick="toMenu"
        android:shadowColor="@color/shadow_color"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <ImageButton
        android:id="@+id/btn_account"
        style="@style/BotonImagen"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextName"
        style="@style/EditText"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/txt_negro"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g_title" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditText"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/txt_negro"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/passwordTooltip"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:text="* Requisitos de contraseña: Al menos 8 caracteres, Una mayúscula, Una minúscula, y 6 dígitos."
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/userNameTooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="* El nombre ya existe"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/emailTooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="* El correo electrónico no es válido"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/repeatPasswordTooltip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="* Las contraseñas no coinciden"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/EditText"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/txt_negro"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/EditText"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/txt_negro"
        android:ems="10"
        android:hint="@string/repite_contraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
